--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 *.swp
 .DS_Store
 
+.vscode/
+.idea/
+*.iml
+*.log
+
+
 /data
 .env
 
@@ -15,3 +21,5 @@ runs/
 database/
 *.png
 dataset_information.ipynb
+
+.runs
